--- a/public/index.html
+++ b/public/index.html
@@ -383,6 +383,9 @@ body.webview {
     <button id="share">
     <span class="icon">📖</span>
   </button>
+    <button id="video">
+    <span class="icon">▶️</span>
+  </button>
 </div>
 
 <!-- Overlay de tarjeta coleccionable -->
@@ -402,6 +405,7 @@ const grid=document.getElementById("grid"),
       btnOtro=document.getElementById("otro"),
       btnLibro=document.getElementById("fisico"),
       btnShare=document.getElementById("share"),
+  btnVideo=document.getElementById("video"),
       cele=document.getElementById("cele"),
       celeMsg=document.getElementById("celeMsg");
 
