--- a/public/index.html
+++ b/public/index.html
@@ -407,9 +407,9 @@ const grid=document.getElementById("grid"),
 
 // Frases rotativas estilo Jobs
 const frasesIntro = [
-  "¿Qué sientes y qué buscas ahora?",
-  "¿Qué sientes y qué buscas ahora?",
-  "¿Qué sientes y qué buscas ahora?"
+  "¿Qué sientes o qué buscas ahora?",
+  "¿Qué sientes o qué buscas ahora?",
+  "¿Qué sientes o qué buscas ahora?"
 ];
 const introEl=document.getElementById("intro");
 const frase=frasesIntro[Math.floor(Math.random()*frasesIntro.length)];
