--- a/public/index.html
+++ b/public/index.html
@@ -604,7 +604,7 @@ card.style = `
     </div>
 
 /* ===== SWITCH PARA ACTIVAR / DESACTIVAR BUSCALIBRE ===== */
-const activarBuscalibre = false; 
+const activarBuscalibre = True; 
 /* ======================================================== */
 
 // 👇 Esto va DENTRO de card.innerHTML, debajo de parrafoBot y antes del logo:
