--- a/public/index.html
+++ b/public/index.html
@@ -571,6 +571,63 @@ btnShare.onclick = () => {
   const safeSerif  = t.style.serif  || "Georgia, serif";
   const safeSans   = t.style.sans   || "Arial, sans-serif";
 
+  /* ===== SWITCH PARA ACTIVAR / DESACTIVAR BUSCALIBRE ===== */
+const activarBuscalibre = false;
+/* ======================================================== */
+
+let buscalibreHTML = "";
+
+if (activarBuscalibre) {
+
+    const palabras = libro.palabras || [];
+    let p1 = "", p2 = "";
+
+    if (palabras.length > 0) {
+        const s = [...palabras].sort(() => 0.5 - Math.random());
+        p1 = s[0] || "";
+        p2 = s[1] || s[0] || "";
+    }
+
+    const queryRandom = encodeURIComponent(`${p1} ${p2}`);
+
+    buscalibreHTML = `
+        <div style="margin:18px 0 8px 0; text-align:center; display:flex; flex-direction:column; gap:10px;">
+
+          <a href="https://www.buscalibre.com.mx/libros/search/?q=${encodeURIComponent(libro.titulo + ' ' + libro.autor)}"
+              target="_blank"
+              style="
+                  display:block;
+                  padding:12px 18px;
+                  font:600 18px Arial, sans-serif;
+                  border-radius:16px;
+                  background:linear-gradient(135deg,#27fdd6,#00d4ff);
+                  color:#000;
+                  text-decoration:none;
+                  box-shadow:0 4px 12px rgba(0,0,0,.25);
+              ">
+              Comprar este libro en Buscalibre
+          </a>
+
+          <a href="https://www.buscalibre.com.mx/libros/search/?q=${queryRandom}"
+              target="_blank"
+              style="
+                  display:block;
+                  padding:12px 18px;
+                  font:600 18px Arial, sans-serif;
+                  border-radius:16px;
+                  background:linear-gradient(135deg,#ffcf2b,#ff9320);
+                  color:#000;
+                  text-decoration:none;
+                  box-shadow:0 4px 12px rgba(0,0,0,.25);
+              ">
+              Ver más libros como este
+          </a>
+
+        </div>
+    `;
+}
+
+
 card.style = `
     width: min(420px, 90vw);
     height: min(600px, 90vh);
@@ -603,6 +660,7 @@ card.style = `
       ${t.parrafoBot}
     </div>
 
+${buscalibreHTML}
     
     <div style="text-align:center; margin-top:10px;">
       <img src="${
