--- a/public/index.html
+++ b/public/index.html
@@ -572,7 +572,7 @@ btnShare.onclick = () => {
   const safeSans   = t.style.sans   || "Arial, sans-serif";
 
   /* ===== SWITCH PARA ACTIVAR / DESACTIVAR BUSCALIBRE ===== */
-const activarBuscalibre = false;
+const activarBuscalibre = true;
 /* ======================================================== */
 
 let buscalibreHTML = "";
