--- a/public/index.html
+++ b/public/index.html
@@ -604,7 +604,7 @@ const queryRandom = encodeURIComponent(p);
                   text-decoration:none;
                   box-shadow:0 4px 12px rgba(0,0,0,.25);
               ">
-              Comprar este libro en Buscalibre
+              Comprar en Buscalibre
           </a>
 
           <a href="https://www.buscalibre.com.mx/libros/search/?ui=desktop&q=${queryRandom}"
@@ -619,7 +619,7 @@ const queryRandom = encodeURIComponent(p);
                   text-decoration:none;
                   box-shadow:0 4px 12px rgba(0,0,0,.25);
               ">
-              Ver más libros como este
+              Ver más como este
           </a>
 
         </div>
