--- a/public/index.html
+++ b/public/index.html
@@ -619,11 +619,21 @@ const queryRandom = encodeURIComponent(p);
       onmouseover="this.style.borderColor='rgba(255,255,255,0.35)'"
       onmouseout="this.style.borderColor='rgba(255,255,255,0.15)'"
     >
-      <img 
-        src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png"
-        alt="Buscalibre"
-        style="height:22px; opacity:0.90;"
-      >
+     <img 
+  src="https://raw.githubusercontent.com/badirnakid/triggui-app/main/public/buscalibre.png"
+  alt="Buscalibre"
+  style="
+    display:block;
+    height:auto;
+    max-height:22px;
+    max-width:120px;
+    width:auto;
+    object-fit:contain;
+    object-position:center;
+    opacity:0.90;
+  "
+>
+
       <span style="
         font: 600 15px 'Archivo', sans-serif;
         color:#ffffff;
