--- a/public/index.html
+++ b/public/index.html
@@ -639,7 +639,7 @@ const queryRandom = encodeURIComponent(p);
         color:#ffffff;
         letter-spacing: 0.25px;
       ">
-        Comprar este libro
+        Comprar libro
       </span>
     </a>
 
