--- a/public/index.html
+++ b/public/index.html
@@ -663,7 +663,7 @@ const queryRandom = encodeURIComponent(p);
       onmouseover="this.style.borderColor='rgba(255,255,255,0.35)'"
       onmouseout="this.style.borderColor='rgba(255,255,255,0.15)'"
     >
-      Ver más libros como este
+      Explora posibilidades
     </a>
 
   </div>
