--- a/public/index.html
+++ b/public/index.html
@@ -362,18 +362,27 @@ body.webview {
   background: #0e0f1b;
 }
 
-/* ==================== PULSE PORTADA (100% SEGURO) ==================== */
+/* ==================== PULSE + GLOW PORTADA (Nivel Dios) ==================== */
 @keyframes trigguiPulse {
-  0%   { transform: scale(1); }
-  50%  { transform: scale(1.035); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+    filter: drop-shadow(0 0 0px rgba(255,255,255,0));
+  }
+  50% {
+    transform: scale(1.055);
+    filter: drop-shadow(0 0 8px rgba(255,255,255,0.12));
+  }
+  100% {
+    transform: scale(1);
+    filter: drop-shadow(0 0 0px rgba(255,255,255,0));
+  }
 }
 
-/* Solo la imagen de portada pulsa — nada más */
 .portada.reveal-pulse img {
-  animation: trigguiPulse 2.6s ease-in-out infinite;
-  will-change: transform;
+  animation: trigguiPulse 2.8s cubic-bezier(0.32, 0.01, 0.16, 1) infinite;
+  will-change: transform, filter;
 }
+
 
   
   
